# hsreduce-test-cases

./: .gitignore  .gitmodules  README.md
containers-merged/: Bug_hsreduce.hs
ticket13877/: Bug_hsreduce.hs  Bug_structureshrink.hs  hsreduce_performance.csv  hsreduce_statistics.csv  interesting.sh
ticket14040/: Bug_hsreduce.hs  ghc822.nix  hsreduce_performance.csv  hsreduce_statistics.csv  interesting.sh
ticket14270/: Bug.hs.stale_state  Bug_hsreduce.hs  Ticket14270_hsreduce.hs  halfempty.out  hsreduce_performance.csv  hsreduce_statistics.csv  interesting.sh
ticket14779/: Bug_hsreduce.hs  halfempty.out  hsreduce_performance.csv  hsreduce_statistics.csv  interesting.sh
ticket14827/: Bug.hs.stale_state  Bug.stale.hs  Bug_creduce.hs  Bug_hsreduce.hs  hsreduce_performance.csv  hsreduce_statistics.csv  interesting.sh  shell.nix
ticket15696/: interesting.sh
ticket15696_1/: Bug_hsreduce.hs  hsreduce_performance.csv  hsreduce_statistics.csv  interesting.sh
ticket15696_2/: Bug.hs  Bug_creduce.hs  Bug_hsreduce.hs  hsreduce_performance.csv  hsreduce_statistics.csv  hsreduce_timing.csv  interesting.sh  run.sh
ticket15696_3/: Main.hs  containers.cabal  ghc843.nix  ghc861.nix  hie.yaml  init.sh  interesting.sh  shell.nix
ticket16979/: Bug.timeout.hs  Bug_HEAD.hs  Bug_detached_HEAD.hs  Bug_hsreduce.hs  hsreduce_performance.csv  hsreduce_statistics.csv  interesting.sh  shell.nix
ticket18098/: Bug.hs  Bug_creduce.hs  Bug_hsreduce.hs  README  ghc822.nix  ghc865.nix  hsreduce_performance.csv  hsreduce_statistics.csv  init.sh  interesting.sh  shell.nix
(+30 files in other folders)
